fixed cards covering dropdown menu

--- a/CarRental/CarRental.Web/wwwroot/css/site.css
+++ b/CarRental/CarRental.Web/wwwroot/css/site.css
@@ -18,6 +18,8 @@ html {
 }
 
 .search-container {
+    position: relative;
+    z-index: 2;
     min-height: 5rem;
     background-blend-mode: darken;
     width: 100%;
@@ -60,6 +62,7 @@ body {
 .search {
     max-width: 10.75rem;
 }
+
 
 .year {
     max-width: 5.375rem;
@@ -116,8 +119,6 @@ body {
 
 .dropdown-menu {
     max-width: 5rem;
-    position: relative;
-    z-index: 1000;
 }
 
 .input-group {
